--- a/GiveLife-frontend/package.json
+++ b/GiveLife-frontend/package.json
@@ -19,11 +19,12 @@
     "@angular/platform-browser": "~11.2.5",
     "@angular/platform-browser-dynamic": "~11.2.5",
     "@angular/router": "~11.2.5",
+    "autoprefixer": "^10.2.6",
     "bootstrap": "^5.0.1",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
+    "postcss": "^8.3.5",
     "rxjs": "~6.6.0",
-    "tailwindcss": "^2.2.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
@@ -42,6 +43,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
+    "tailwindcss": "^2.2.2",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.5"
