--- a/GiveLife-frontend/package.json
+++ b/GiveLife-frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~11.2.5",
     "@angular/platform-browser-dynamic": "~11.2.5",
     "@angular/router": "~11.2.5",
+    "@auth0/angular-jwt": "^4.2.0",
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "autoprefixer": "^10.2.6",
     "bootstrap": "^5.0.1",
