--- a/GiveLife-frontend/package.json
+++ b/GiveLife-frontend/package.json
@@ -3,17 +3,21 @@
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve -o",
+        "start": "node server.js",
         "build": "ng build",
         "test": "ng test",
         "lint": "ng lint",
-        "e2e": "ng e2e"
+        "e2e": "ng e2e",
+        "typescript": "~4.1.5",
+        "heroku-postbuild": "ng build --prod"
     },
     "private": true,
     "dependencies": {
         "@angular/animations": "~11.2.5",
+        "@angular/cli": "^12.1.1",
         "@angular/common": "~11.2.5",
         "@angular/compiler": "~11.2.5",
+        "@angular/compiler-cli": "^11.2.14",
         "@angular/core": "~11.2.5",
         "@angular/forms": "~11.2.5",
         "@angular/localize": "~11.2.5",
@@ -25,21 +29,22 @@
         "@ng-bootstrap/ng-bootstrap": "^9.1.3",
         "autoprefixer": "^10.2.6",
         "bootstrap": "^5.0.1",
+        "express": "^4.17.1",
         "jquery": "^3.6.0",
         "ngx-bootstrap": "^6.2.0",
         "ngx-bootstrap-modal": "^2.0.1",
+        "path": "^0.12.7",
         "popper.js": "^1.16.1",
         "postcss": "^8.3.5",
         "rxjs": "~6.6.0",
         "tslib": "^2.0.0",
+        "typescript": "~4.1.5",
         "visus": "0.0.1",
         "vivus": "^0.4.6",
         "zone.js": "~0.11.3"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~0.1102.3",
-        "@angular/cli": "^12.1.1",
-        "@angular/compiler-cli": "^11.2.14",
         "@types/jasmine": "~3.6.0",
         "@types/node": "^12.11.1",
         "codelyzer": "^6.0.0",
@@ -53,7 +58,10 @@
         "protractor": "~7.0.0",
         "tailwindcss": "^2.2.2",
         "ts-node": "~8.3.0",
-        "tslint": "~6.1.0",
-        "typescript": "~4.1.5"
+        "tslint": "~6.1.0"
+    },
+    "engines": {
+        "node": "12.18.2",
+        "npm": "6.14.5"
     }
 }
