--- a/GiveLife-frontend/package.json
+++ b/GiveLife-frontend/package.json
@@ -26,8 +26,10 @@
         "autoprefixer": "^10.2.6",
         "bootstrap": "^5.0.1",
         "jquery": "^3.6.0",
+        "ng-connection-service": "^1.0.4",
         "ngx-bootstrap": "^6.2.0",
         "ngx-bootstrap-modal": "^2.0.1",
+        "ngx-connection-service": "^7.0.3",
         "popper.js": "^1.16.1",
         "postcss": "^8.3.5",
         "rxjs": "~6.6.0",
